--- a/index.html
+++ b/index.html
@@ -60,366 +60,130 @@
                     onkeyup="searchMatches()">
                 <div id="matches">
 
- <div class="match-link" data-league="WNBA" data-frame="https://topembed.pw/channel/ex7852784">
-                        <div class="match-card">
-                            <div class="match-league">
-                                WNBA
-                            </div>
-                            <div class="match-title">
-                                Indiana Fever vs Dallas Wings
-                            </div>
-                            <div class="match-time">July 13, 2025 - 1:00 PM ET</div>
-                        </div>
-                    </div>
+ <div
+  class="match-link"
+  data-league="NBA"
+  data-frame="https://topembed.pw/channel/FanDuelSportsSoutheast[USA]"
+>
+  <div class="match-card">
+    <div class="match-league">NBA</div>
+    <div class="match-title">Houston Rockets vs Atlanta Hawks
+</div>
+    <div class="match-time">July 14, 2025 - 4:30 PM ET</div>
+  </div>
+</div>
 
 
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                New York Yankees vs Chicago Cubs
-                            </div>
-                            <div class="match-time">July 13, 2025 - 1:35 PM ET</div>
-                        </div>
-                    </div>
+<div
+  class="match-link"
+  data-league="NBA"
+  data-frame="https://topembed.pw/channel/FanDuelSportsSoutheast[USA]"
+>
+  <div class="match-card">
+    <div class="match-league">NBA</div>
+    <div class="match-title">Indiana Pacers vs Chicago Bulls
+</div>
+    <div class="match-time">July 14, 2025 - 6:00 PM ET</div>
+  </div>
+</div>
 
 
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Boston Red Sox vs Tampa Bay Rays
-                            </div>
-                            <div class="match-time">July 13, 2025 - 1:35 PM ET</div>
-                        </div>
-                    </div>
+<div
+  class="match-link"
+  data-league="NBA"
+  data-frame="https://topembed.pw/channel/FanDuelSportsSoutheast[USA]"
+>
+  <div class="match-card">
+    <div class="match-league">NBA</div>
+    <div class="match-title">Dallas Mavericks vs Charlotte Hornets
+</div>
+    <div class="match-time">July 14, 2025 - 6:30 PM ET</div>
+  </div>
+</div>
+
+<div
+  class="match-link"
+  data-league="NBA"
+  data-frame="https://topembed.pw/channel/FanDuelSportsSoutheast[USA]"
+>
+  <div class="match-card">
+    <div class="match-league">NBA</div>
+    <div class="match-title">Miami Heat vs Boston Celtics
+</div>
+    <div class="match-time">July 14, 2025 - 8:00 PM ET</div>
+  </div>
+</div>
 
 
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Baltimore Orioles vs Miami Marlins
-                            </div>
-                            <div class="match-time">July 13, 2025 - 1:35 PM ET</div>
-                        </div>
-                    </div>
+<div
+  class="match-link"
+  data-league="WNBA"
+  data-frame="https://topembed.pw/channel/ex7852786"
+>
+  <div class="match-card">
+    <div class="match-league">WNBA</div>
+    <div class="match-title">Chicago Sky vs Minnesota Lynx
+</div>
+    <div class="match-time">July 14, 2025 - 8:00 PM ET</div>
+  </div>
+</div>
 
 
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Cincinnati Reds vs Colorado Rockies
-                            </div>
-                            <div class="match-time">July 13, 2025 - 1:40 PM ET</div>
-                        </div>
-                    </div>
+<div
+  class="match-link"
+  data-league="NBA"
+  data-frame="https://topembed.pw/channel/FanDuelSportsSoutheast[USA]"
+>
+  <div class="match-card">
+    <div class="match-league">NBA</div>
+    <div class="match-title">San Antonio Spurs vs Utah Jazz
+</div>
+    <div class="match-time">July 14, 2025 - 8:30 PM ET</div>
+  </div>
+</div>
 
 
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Detroit Tigers vs Seattle Mariners
-                            </div>
-                            <div class="match-time">July 13, 2025 - 1:40 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Milwaukee Brewers vs Washington Nationals
-                            </div>
-                            <div class="match-time">July 13, 2025 - 2:20 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Minnesota Twins vs Pittsburgh Pirates
-                            </div>
-                            <div class="match-time">July 13, 2025 - 2:10 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Kansas City Royals vs New York Mets
-                            </div>
-                            <div class="match-time">July 13, 2025 - 2:10 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Houston Astros vs Texas Rangers
-                            </div>
-                            <div class="match-time">July 13, 2025 - 2:10 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Chicago White Sox vs Cleveland Guardians
-                            </div>
-                            <div class="match-time">July 13, 2025 - 2:10 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                St. Louis Cardinals vs Atlanta Braves
-                            </div>
-                            <div class="match-time">July 13, 2025 - 2:15 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="WNBA" data-frame="https://topembed.pw/channel/ex7852780">
-                        <div class="match-card">
-                            <div class="match-league">
-                                WNBA
-                            </div>
-                            <div class="match-title">
-                                New York Liberty vs Atlanta Dream
-                            </div>
-                            <div class="match-time">July 13, 2025 - 3:00 PM ET</div>
-                        </div>
-                    </div>
+<div
+  class="match-link"
+  data-league="NBA"
+  data-frame="https://topembed.pw/channel/FanDuelSportsSoutheast[USA]"
+>
+  <div class="match-card">
+    <div class="match-league">NBA</div>
+    <div class="match-title">Sacramento Kings vs Phoenix Suns
+</div>
+    <div class="match-time">July 14, 2025 - 10:00 PM ET</div>
+  </div>
+</div>
 
 
 
-                    <div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ex8195944">
-                        <div class="match-card">
-                            <div class="match-league">
-                                NBA
-                            </div>
-                            <div class="match-title">
-                                Atlanta Hawks vs Phoenix Suns
-                            </div>
-                            <div class="match-time">July 13, 2025 - 3:30 PM ET</div>
-                        </div>
-                    </div>
+<div
+  class="match-link"
+  data-league="WNBA"
+  data-frame="https://topembed.pw/channel/ex7852787"
+>
+  <div class="match-card">
+    <div class="match-league">WNBA</div>
+    <div class="match-title">Golden State Valkyries vs Phoenix Mercury
+</div>
+    <div class="match-time">July 14, 2025 - 10:00 PM ET</div>
+  </div>
+</div>
 
 
-
-                    <div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ESPN2[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                NBA
-                            </div>
-                            <div class="match-title">
-                                Houston Rockets vs Detroit Pistons
-                            </div>
-                            <div class="match-time">July 13, 2025 - 4:00 PM ET</div>
-                        </div>
-                    </div>
-
-
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                San Francisco Giants vs Los Angeles Dodgers
-                            </div>
-                            <div class="match-time">July 13, 2025 - 4:05 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Athletics vs Toronto Blue Jays
-                            </div>
-                            <div class="match-time">July 13, 2025 - 4:05 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                Los Angeles Angels vs Arizona Diamondbacks
-                            </div>
-                            <div class="match-time">July 13, 2025 - 4:07 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="MLB" data-frame="https://topembed.pw/channel/MLBNetwork[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                MLB
-                            </div>
-                            <div class="match-title">
-                                San Diego Padres vs Philadelphia Phillies
-                            </div>
-                            <div class="match-time">July 13, 2025 - 4:07 PM ET</div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ex8195946">
-                        <div class="match-card">
-                            <div class="match-league">
-                                NBA
-                            </div>
-                            <div class="match-title">
-                                Boston Celtics vs New York Knicks
-                            </div>
-                            <div class="match-time">July 13, 2025 - 5:30 PM ET</div>
-                        </div>
-                    </div>
-
-
-
-
-
-                    <div class="match-link" data-league="WNBA" data-frame="https://topembed.pw/channel/NBCSBoston[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                WNBA
-                            </div>
-                            <div class="match-title">
-                                Los Angeles Sparks vs Connecticut Sun
-                            </div>
-                            <div class="match-time">July 13, 2025 - 6:00 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="WNBA" data-frame="https://topembed.pw/channel/ex7852785">
-                        <div class="match-card">
-                            <div class="match-league">
-                                WNBA
-                            </div>
-                            <div class="match-title">
-                                Seattle Storm vs Washington Mystics
-                            </div>
-                            <div class="match-time">July 13, 2025 - 6:00 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ESPN2[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                NBA
-                            </div>
-                            <div class="match-title">
-                                Orlando Magic vs Toronto Raptors
-                            </div>
-                            <div class="match-time">July 13, 2025 - 6:00 PM ET</div>
-                        </div>
-                    </div>
-
-
-                    <div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ex8195948">
-                        <div class="match-card">
-                            <div class="match-league">
-                                NBA
-                            </div>
-                            <div class="match-title">
-                                Cleveland Cavaliers vs Miami Heat
-                            </div>
-                            <div class="match-time">July 13, 2025 - 7:30 PM ET</div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ESPN2[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                NBA
-                            </div>
-                            <div class="match-title">
-                                Washington Wizards vs Brooklyn Nets
-                            </div>
-                            <div class="match-time">July 13, 2025 - 8:00 PM ET</div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ex8195963">
-                        <div class="match-card">
-                            <div class="match-league">
-                                NBA
-                            </div>
-                            <div class="match-title">
-                                Los Angeles Clippers vs Milwaukee Bucks
-                            </div>
-                            <div class="match-time">July 13, 2025 - 9:30 PM ET</div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ESPN2[USA]">
-                        <div class="match-card">
-                            <div class="match-league">
-                                NBA
-                            </div>
-                            <div class="match-title">
-                                Utah Jazz vs Golden State Warriors
-                            </div>
-                            <div class="match-time">July 13, 2025 - 10:00 PM ET</div>
-                        </div>
-                    </div>
+<div
+  class="match-link"
+  data-league="NBA"
+  data-frame="https://topembed.pw/channel/FanDuelSportsSoutheast[USA]"
+>
+  <div class="match-card">
+    <div class="match-league">NBA</div>
+    <div class="match-title">Los Angeles Lakers vs Los Angeles Clippers
+</div>
+    <div class="match-time">July 14, 2025 - 10:30 PM ET</div>
+  </div>
+</div>
 
                 </div>
             </section>
