--- a/nba.html
+++ b/nba.html
@@ -94,73 +94,74 @@
 
                 <!-- Matches -->
 
-     <div class="match-box" data-iframe="https">
-    <div class="match-header">WNBA</div>
-    <div class="teams">
-        <img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/wnba/500/la.png&w=40&h=40&scale=crop&cquality=40&location=origin"
-            alt="logo" /><span>
-
-
-            Los Angeles vs 
-Atlanta
-
-        </span><img
-            src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/wnba/500/atl.png&w=40&h=40&scale=crop&cquality=40&location=origin:"
-            alt="logo" />
+   <div class='match-box' data-iframe='https://castweb.xyz/player1.php?hd=706'>
+    <div class='match-header'>WNBA</div>
+    <div class='teams'><img src='https://a.espncdn.com/i/teamlogos/wnba/500/wsh.png' alt='logo' /><span>Washington
+            Mystics vs Phoenix Mercury</span><img src='https://a.espncdn.com/i/teamlogos/wnba/500/phx.png' alt='logo' />
     </div>
-    <div class="match-info">
-        <div class="date-container"> <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <div class='match-info'>
+        <div class='date-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
+                height='16'>
                 <path
-                    d="M20 10V7C20 5.89543 19.1046 5 18 5H6C4.89543 5 4 5.89543 4 7V10M20 10V19C20 20.1046 19.1046 21 18 21H6C4.89543 21 4 20.1046 4 19V10M20 10H4M8 3V7M16 3V7"
-                    stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path>
-                <rect x="6" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
-                <rect x="10.5" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
-                <rect x="15" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
-            </svg><span>September 3, 2025</span></div>
-        <div class="time-container"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    d='M20 10V7C20 5.89543 19.1046 5 18 5H6C4.89543 5 4 5.89543 4 7V10M20 10V19C20 20.1046 19.1046 21 18 21H6C4.89543 21 4 20.1046 4 19V10M20 10H4M8 3V7M16 3V7'
+                    stroke='#fff' stroke-width='2' stroke-linecap='round' />
+                <rect x='6' y='12' width='3' height='3' rx='0.5' fill='#fff' />
+                <rect x='10.5' y='12' width='3' height='3' rx='0.5' fill='#fff' />
+                <rect x='15' y='12' width='3' height='3' rx='0.5' fill='#fff' />
+            </svg><span>September 04, 2025</span></div>
+        <div class='time-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
+                height='16'>
                 <path
-                    d="M12 7V12L14.5 10.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
-                    stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                </path>
-            </svg><span>07:30 PM ET</span></div>
+                    d='M12 7V12L14.5 10.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z'
+                    stroke='#fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' />
+            </svg><span>07:30 PM GMT</span></div>
     </div>
 </div>
-
-
-
-
-<div class="match-box" data-iframe="https">
-    <div class="match-header">WNBA</div>
-    <div class="teams">
-        <img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/wnba/500/con.png&w=40&h=40&scale=crop&cquality=40&location=origin"
-            alt="logo" /><span>
-
-
-            Connecticut vs 
-Chicago
-
-        </span><img
-            src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/wnba/500/chi.png&w=40&h=40&scale=crop&cquality=40&location=origin:"
-            alt="logo" />
-    </div>
-    <div class="match-info">
-        <div class="date-container"> <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<div class='match-box' data-iframe='https://castweb.xyz/player1.php?hd=708'>
+    <div class='match-header'>WNBA</div>
+    <div class='teams'><img src='https://a.espncdn.com/i/teamlogos/wnba/500/scoreboard/gs.png' alt='logo' /><span>Golden
+            State Valkyries vs Dallas Wings</span><img src='https://a.espncdn.com/i/teamlogos/wnba/500/dal.png'
+            alt='logo' /></div>
+    <div class='match-info'>
+        <div class='date-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
+                height='16'>
                 <path
-                    d="M20 10V7C20 5.89543 19.1046 5 18 5H6C4.89543 5 4 5.89543 4 7V10M20 10V19C20 20.1046 19.1046 21 18 21H6C4.89543 21 4 20.1046 4 19V10M20 10H4M8 3V7M16 3V7"
-                    stroke="#ffffff" stroke-width="2" stroke-linecap="round"></path>
-                <rect x="6" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
-                <rect x="10.5" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
-                <rect x="15" y="12" width="3" height="3" rx="0.5" fill="#ffffff"></rect>
-            </svg><span>September 3, 2025</span></div>
-        <div class="time-container"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    d='M20 10V7C20 5.89543 19.1046 5 18 5H6C4.89543 5 4 5.89543 4 7V10M20 10V19C20 20.1046 19.1046 21 18 21H6C4.89543 21 4 20.1046 4 19V10M20 10H4M8 3V7M16 3V7'
+                    stroke='#fff' stroke-width='2' stroke-linecap='round' />
+                <rect x='6' y='12' width='3' height='3' rx='0.5' fill='#fff' />
+                <rect x='10.5' y='12' width='3' height='3' rx='0.5' fill='#fff' />
+                <rect x='15' y='12' width='3' height='3' rx='0.5' fill='#fff' />
+            </svg><span>September 04, 2025</span></div>
+        <div class='time-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
+                height='16'>
                 <path
-                    d="M12 7V12L14.5 10.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
-                    stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                </path>
-            </svg><span>08:00 PM ET</span></div>
+                    d='M12 7V12L14.5 10.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z'
+                    stroke='#fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' />
+            </svg><span>10:00 AM GMT</span></div>
     </div>
 </div>
-
+<div class='match-box' data-iframe='https://castweb.xyz/player1.php?hd=709'>
+    <div class='match-header'>WNBA</div>
+    <div class='teams'><img src='https://a.espncdn.com/i/teamlogos/wnba/500/lv.png' alt='logo' /><span>Las Vegas Aces vs
+            Minnesota Lynx</span><img src='https://a.espncdn.com/i/teamlogos/wnba/500/min.png' alt='logo' /></div>
+    <div class='match-info'>
+        <div class='date-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
+                height='16'>
+                <path
+                    d='M20 10V7C20 5.89543 19.1046 5 18 5H6C4.89543 5 4 5.89543 4 7V10M20 10V19C20 20.1046 19.1046 21 18 21H6C4.89543 21 4 20.1046 4 19V10M20 10H4M8 3V7M16 3V7'
+                    stroke='#fff' stroke-width='2' stroke-linecap='round' />
+                <rect x='6' y='12' width='3' height='3' rx='0.5' fill='#fff' />
+                <rect x='10.5' y='12' width='3' height='3' rx='0.5' fill='#fff' />
+                <rect x='15' y='12' width='3' height='3' rx='0.5' fill='#fff' />
+            </svg><span>September 04, 2025</span></div>
+        <div class='time-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
+                height='16'>
+                <path
+                    d='M12 7V12L14.5 10.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z'
+                    stroke='#fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' />
+            </svg><span>10:00 AM GMT</span></div>
+    </div>
+</div>
 
                 <!-- Matches -->
             </div>
@@ -250,6 +251,7 @@ Chicago
 </body>
 
 </html>
+
 
 
 
