--- a/nfl.html
+++ b/nfl.html
@@ -94,11 +94,11 @@
 
                 <!-- Matches -->
 
-<div class='match-box' data-iframe='https://topembed.pw/channel/NBC[USA]'>
+<div class='match-box' data-iframe='https://thedaddy.to/embed/stream-114.php'>
     <div class='match-header'>NFL</div>
-    <div class='teams'><img src='https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/phi.png'
-            alt='logo' /><span>Philadelphia Eagles vs Dallas Cowboys</span><img
-            src='https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/dal.png' alt='logo' /></div>
+    <div class='teams'><img src='https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/lac.png' alt='logo' /><span>Los
+            Angeles Chargers vs Kansas City Chiefs</span><img
+            src='https://a.espncdn.com/i/teamlogos/nfl/500/scoreboard/kc.png' alt='logo' /></div>
     <div class='match-info'>
         <div class='date-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
                 height='16'>
@@ -108,13 +108,13 @@
                 <rect x='6' y='12' width='3' height='3' rx='0.5' fill='#fff' />
                 <rect x='10.5' y='12' width='3' height='3' rx='0.5' fill='#fff' />
                 <rect x='15' y='12' width='3' height='3' rx='0.5' fill='#fff' />
-            </svg><span>September 04, 2025</span></div>
+            </svg><span>September 05, 2025</span></div>
         <div class='time-container'><svg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg' width='16'
                 height='16'>
                 <path
                     d='M12 7V12L14.5 10.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z'
                     stroke='#fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' />
-            </svg><span>08:20 PM ET</span></div>
+            </svg><span>08:00 AM ET</span></div>
     </div>
 </div>
                 
@@ -207,6 +207,7 @@
 </body>
 
 </html>
+
 
 
 
